--- a/vignettes/spathial.Rmd
+++ b/vignettes/spathial.Rmd
@@ -11,13 +11,16 @@ vignette: >
 ```{r echo=FALSE}
 knitr::opts_chunk$set(fig.width=7, fig.height=5) 
 ```
-The _spathial_ package is a generic tool for manifold analysis. It allows to infer a relevant transition or evolutionary path which can highlights the features involved in a specific process. _spathial_ can be useful in all the scenarios where the temporal evolution is the main problem (e.g. tumor progression).  
+The _spathial_ package is a generic tool for manifold analysis. It allows to infer a relevant transition or evolutionary path which can highlights the features involved in a specific process. _spathial_ can be useful in all the scenarios where the temporal (or pseudo-temporal) evolution is the main problem (e.g. tumor progression).  
 
-The _spathial_ package implements the principal path algorithm [1] and allows to navigate a n-dimensional space. The input of the algorithm are two points, which represent the boundary condition of the algorithm: the starting and the ending points. Given the boundaries, the algorithm learns a smooth transition path connecting them. Along the path there are new intermediate data samples which gradually morphs from the starting point to the ending point.
-In this way it is possible to move from two known states and analize which features are involved in the transition from the two states.
-The workflow for constructing the path is composed of few steps. Firstly, it is necessary to choose the starting and the ending points. _spathial_ provides three different alternatives to do that (which will be discussed later), but the user can additionally choose their own strategy. The second step consist in prefiltering the data. This step is non strictly necessary to construct the path, but allows to obtain a local solution removing some of the data points. In this way, the solution is based on a restricted number of samples. Finally, it is possible to compute the principal path algorithm. 
+The _spathial_ package implements the principal path algorithm [1] and allows to navigate a n-dimensional space. The input of the algorithm are two points, which represent the boundary conditions of the algorithm: the starting and the ending points. Given the boundaries, the algorithm learns a smooth transition path connecting them. Along the path there are new intermediate data samples which gradually morphs from the starting point to the ending point.
+In this way it is possible to move from two known states. Additionally, analysing the correlation between the path progression and the features is possible to perform feature selection.
+The workflow for constructing the path is composed of few steps. 
+Firstly, it is necessary to choose the starting and the ending points. _spathial_ provides three different alternatives to do that (which will be discussed later), but the user can additionally choose his own strategy. 
+The second step consist in prefiltering the data. This step is non strictly necessary to construct the path, but allows to obtain a local solution removing some of the data points. In this way, the solution is based on a restricted number of samples. 
+Finally, it is possible to run the principal path algorithm. 
 
-_spathial_ additionally provides functions to analize the path. In particular it allows to plot data in 2d using the t-SNE algorithm [2] for dimensionality reduction, to learn the labels corresponding to each path's intermediate points using the kNN algorithm [3] and to compute the statistics (Pearson's correlation, rank, p_value and q_value). The latter allows to find the features involved in the transition process from the start point to the end point.
+_spathial_ additionally provides functions to analize the path. In particular it allows to plot data in 2d using the t-SNE algorithm [2] for dimensionality reduction, to learn the labels corresponding to each path's intermediate points using the kNN algorithm [3] and to compute the Pearson's correlation (and the associated p_value and q_value) of the features with respect to the path progression. The latter allows to find the features involved in the transition process from the start point to the end point.
 
 The next sections describes how to use _spathial_ and provides some examples.
 
@@ -35,7 +38,7 @@ library("spathial")
 ```
 
 ## Load data
-To compute the principal path one assumes that to have an input matrix ```X```. 
+To compute the principal path one assumes to have an input matrix ```X```. 
 Each column of the matrix ```X``` is a feature (e.g. a gene) and each row has a univocal name (e.g. a sample). 
 For a supervised solution, one also assumes that the input vector ```X_labels``` is present which contains for each row of ```X``` a description label (e.g. the sample category). 
 Otherwise, the unsupervised solution can be obtained with ```X_labels = NULL```.
@@ -190,7 +193,7 @@ legend("topright", inset=c(-0.3,0), legend=legend_names, col=legend_color, pch=l
 ```
 
 ## Step 4: principal path
-The function ```spathialWay``` run the principal path algorithm and gives as output the waypoints points. It takes as input the matrix ```X```, the boundaries ```boundary_ids``` and the parameter ```NC```, which is the desired number of waypoints of the resulting principal path. For example, given ```NC=10``` the resulting path will be composed of 10 waypoints plus the starting and the ending points. 
+The function ```spathialWay``` executes the principal path algorithm and gives as output the waypoints. It takes as input the matrix ```X```, the boundaries ```boundary_ids``` and the parameter ```NC```, which is the desired number of waypoints of the resulting principal path. For example, given ```NC=10``` the resulting path will be composed of 10 waypoints plus the starting and the ending points. 
 
 The output of the function ```spathialWay``` is the variable ```spathial_res```, which contains the coordinates of the waypoints of the principal path;   
 
@@ -215,7 +218,7 @@ The next subsection shows how to get results from the output object ```spathial_
 ## Step 5: understanding the results
 The package _spathial_ includes three different functions to interpret the output of the principal path algorithm: ```spathialPlot```, ```spathialLables``` and ```spathialStatistics```. The following subsections describe what they do and how to use each of them.
 
-### Plot principal path
+### Plotting the principal path
 The function ```spathialPlot``` plots the principal path together with all the data points (either filtered or not filtered) together with the boundaries. This function takes as input the matrix ```X``` (the initial version), the vector ```X_labels``` (or NULL), the boundaries ```boundary_ids```, the output of the principal path algorithm ```spathial_res```, the parameter ```perplexity value``` (default 30), the parameter ```mask``` which is one of the results of the prefiltering and it is ```NULL``` when the prefiltering is not computed and the parameter ```title``` which is the title of the plot and can be ```NULL```.
 When the input matrix ```X``` has more than 2 columns, the function reduce the dimension of the space from N (>2) to 2 using the t-SNE algorithm [2].
 
@@ -236,8 +239,8 @@ spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res_without_filtering
 )
 ```
 
-### Assess path progression
-The function ```spathialLabels``` predicts the label for each waypoints of the principal path by detecting the nearest sample [3]. 
+### Assessing the path progression
+The function ```spathialLabels``` predicts the label for each waypoint of the principal path by detecting the nearest sample [3]. 
 This function is available only when ```X_labels != NULL``` and could be particularly useful when one wants to find the breakpoints between one class and the other. 
 The function takes as input the matrix ```X``` (which is composed only by the preserved samples if the prefiltering was used), the vector ```X_labels``` and the output object of the principal path algorithm ```spathial_res```. The output are the labels for each waypoint of the principal path.
 
@@ -355,7 +358,7 @@ Then one can quickly extract the gene expression profiles most correlated with t
 # Correlation along the path
 statistics<-spathialStatistics(spathial_res)
 ```
-In this case, the statistic is particularly interesting, as it shows the most associated the functional genes to the transition between normal and tumor liver tissues. 
+In this case, the statistics is particularly interesting, as it shows the most associated functional genes to the transition between normal and tumor liver tissues. 
 In fact, it contains information about the correlation between each feature (genes) and a vector from 1 to NC+2 (where NC is the number of waypoints) that represents the progression along the path.
 This helps finding the genes particularly involved with the evolution from the healthy to the unhealthy state. The following code highlights the 10 most positively and most negatively associated genes to the normal-tumor path progression:
 ```{r}
@@ -368,7 +371,7 @@ top_negative_correlations
 
 # A real case study
 
-In this section it is shown a real case study on TCGA Lung Cancer RNA-Seq dataset. In this case the input matrix ```X``` is the fully TCGA Lung Cancer RNA-Seq dataset, with 19637 features (gene expression profiles, RPM-normalized) and 562 samples. Each column of our matrix ```X``` represents a feature and each row is the gene expression profile of a specific sample. The vector ```X_labels``` contains the annotations of the samples ("Tumor" or "Normal") which can be extracted from the TCGA barcode.
+In this section it is shown a real case study on TCGA Lung Cancer RNA-Seq dataset. In this case the input matrix ```X``` is the fully TCGA Lung Cancer RNA-Seq dataset, with 19637 features (gene expression profiles, RPM-normalized) and 562 samples. Each column of matrix ```X``` represents a feature and each row is the gene expression profile of a specific sample. The vector ```X_labels``` contains the annotations of the samples ("Tumor" or "Normal") which can be extracted from the TCGA barcode.
 We provide an ```.rda``` file with both the ```X``` and ```X_labels```. One can simply load it by computing the following command.
 
 ```{r}
@@ -378,8 +381,8 @@ load(myfile)
 
 The aim of the example is to navigate the space from the normal samples to the tumor samples.
 
-In this case, the start point is the more distant normal sample from the tumor centroid and the end point is the more distant tumor sample from the normal centroid. 
-These start and end points are selected because we were searching for the extremes, conceptually the most normal sample and the most not normal sample.
+In this case, the start point is the most distant normal sample from the tumor centroid and the end point is the most distant tumor sample from the normal centroid. 
+These start and end points are selected because one is searching for the extremes, conceptually the most normal sample and the most not normal sample.
 
 Since this is not an existing ```spathialBoundaries``` mode, one can extract the rownames of the starting and the ending points, then one can use the function ```spathialBoundaries``` with ```mode=3``` and setting ```from``` and ```to``` respectively equal to the rownames of the starting and the ending points.
 
@@ -419,7 +422,7 @@ X_labels <- boundaries$X_labels
 ```
 
 In this case the prefiltering won't be executed since one is searching for a global solution. 
-The next step consists in computing the principal path algorithm using the ```spathial``` method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
+The next step consists in running the principal path algorithm using the ```spathial``` method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
 
 ```
 spathial_res <- spathial::spathialWay(X, boundary_ids, NC = 50)
@@ -441,11 +444,11 @@ The _spathial_ method ```spathialStatistics``` can be used to calculate the Pear
 spathial_statistics <- spathial::spathialStatistics(spathial_res)
 ```
 
-In this way it is possible to find the genes involved in the transition from "Normal" to "Tumor" (genes with high correlation coeffients or with significant p values). 
+In this way it is possible to find the genes involved in the transition from "Normal" to "Tumor" (genes with high correlation coeffients and significant p values). 
 
 # An example with Single-cell RNA-Seq data
 
-In this section it is shown a real case study on the Karlsson Single-cell RNA-Seq dataset [4]. In this case the input matrix ```X``` is composed by 23928 features (genes) and 96 samples. Each column of our matrix ```X``` represents a feature and each row is the gene expression profile of a specific cell. The vector ```X_labels``` contains the annotations of the cell ("G1", "S" or "G2/M") which describes the phase of the cell cycle.
+In this section a real case study is shown on the Karlsson Single-cell RNA-Seq dataset [4]. In this case the input matrix ```X``` is composed by 23928 features (genes) and 96 samples. Each column of matrix ```X``` represents a feature and each row is the gene expression profile of a specific cell. The vector ```X_labels``` contains the annotations of the cell ("G1", "S" or "G2/M") which describes the phase of the cell cycle.
 We provide an ```.rda``` file with both the ```X``` and ```X_labels```. Users can simply load it by computing the following commands.
 
 ```{r}
@@ -479,7 +482,7 @@ X_labels <- boundaries$X_labels
 ```
 
 In this case the prefiltering won't be executed since one is searching for a global solution. 
-The next step consists in computing the principal path algorithm using the _spathial_ method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
+The next step consists in running the principal path algorithm using the _spathial_ method ```spathialWay```. A path with 50 intermediate points (waypoints) can be obtained with ```NC=50```. 
 
 ```{r results='hide'}
 spathial_res <- spathial::spathialWay(X, boundary_ids, NC = 50)
@@ -487,19 +490,19 @@ spathial_res <- spathial::spathialWay(X, boundary_ids, NC = 50)
 
 Each waypoint is a new cell which is sligthly different from the previous one and all of them are topologically connected via a chain of springs.
 
-Finally, one can use the _spathial_ method ```spathialPlot``` to plot the path as follow:
+Finally, one can use the _spathial_ method ```spathialPlot``` to plot the path as it follows:
 ```{r}
 spathial::spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value = 30, mask = NULL)
 ```
 
-Since in this example we have a n-dimensional space (with n = 23928), a dimensionality reduction strategy is necessary to plot the principal path algorithm. _spathial_ uses the t-SNE algorithm [2]. 
+Since in this example we have a n-dimensional space (with n = 23928), a dimensionality reduction strategy is necessary to plot the principal path. _spathial_ uses the t-SNE algorithm [2]. 
 
 The _spathial_ method ```spathialStatistics``` can be used to calculate the Pearson's correlation coefficients, the p values, the adjusted p values and rank the genes according to the correlation scores: 
 ```{r}
 spathial_statistics <- spathial::spathialStatistics(spathial_res)
 ```
 
-In this way it is possible to find the genes involved in the transition from "G1" to "G2/M" (genes with high correlation coeffients or with significant p values).
+In this way it is possible to find the genes involved in the transition from "G1" to "G2/M" (genes with high correlation coeffients and significant p values).
 
 # References
 
